fixed italic text issue and adjusted the spacing issue

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -16,13 +16,14 @@ html {
   font-family: 'Titan One', cursive;
   color: #FDFAFA;
   font-size: 55px;
-  padding-top: 100px;
+  padding-top: 50px;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   -webkit-text-stroke: 1px #225948;
 }
 
 .slogan {
   font-family: 'Open Sans', sans-serif;
+  font-style: italic;
   color: #FDFAFA;
 }
 
@@ -31,6 +32,7 @@ html {
   padding: 8px 24px;
   font-family: 'Open Sans', sans-serif;
   font-weight:700;
+  font-style: italic;
   background: linear-gradient(#FEA670, #ee7e39);
   border: 3px solid #FFFFFF;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -39,7 +41,7 @@ html {
 }
 
 .center {
-  margin-top: 400px;
+  margin-top: 450px;
   text-align: center;
 }
 
